--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,7 +13,7 @@
     </main>
 
     <footer>
-        <p>{{ .Lastmod | time.Format "January 01, 0001 @ 01:11" }} CST (UTC -6)</p>
+        <p>{{ .Lastmod }} CST (UTC -6)</p>
     </footer>
 </body>
 </html>
